<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    tools:context="yeongdejong.com.assamhouse.ResetPasswordActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="330dp"
        android:layout_height="180dp"
        android:id="@+id/logoImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/assam_house_logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtForgetEmail"
        android:hint="@string/email_editText"
        android:textColorHint="#deaaaaaa"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_account"
        android:layout_alignRight="@+id/logoImageView"
        android:layout_alignEnd="@+id/logoImageView"
        android:layout_alignLeft="@+id/logoImageView"
        android:layout_alignStart="@+id/logoImageView"
        android:layout_below="@+id/logoImageView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNewPassword"
        android:layout_below="@+id/edtForgetEmail"
        android:hint="@string/new_password"
        android:textColorHint="#deaaaaaa"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_alignLeft="@+id/edtForgetEmail"
        android:layout_alignStart="@+id/edtForgetEmail"
        android:layout_alignRight="@+id/edtForgetEmail"
        android:layout_alignEnd="@+id/edtForgetEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtReenterNewPassword"
        android:layout_below="@+id/edtNewPassword"
        android:hint="@string/reenter_password"
        android:textColorHint="#deaaaaaa"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:fontFamily="sans-serif"
        android:layout_alignLeft="@+id/edtNewPassword"
        android:layout_alignStart="@+id/edtNewPassword"
        android:layout_alignRight="@+id/edtNewPassword"
        android:layout_alignEnd="@+id/edtNewPassword" />

    <Button
        android:text="@string/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtReenterNewPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnResetPassword"
        android:onClick="reset"
        android:layout_alignLeft="@+id/edtReenterNewPassword"
        android:layout_alignStart="@+id/edtReenterNewPassword"
        android:layout_alignRight="@+id/edtReenterNewPassword"
        android:layout_alignEnd="@+id/edtReenterNewPassword" />

</RelativeLayout>
