<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="yeongdejong.com.assamhouse.SignUpActivity"
    android:gravity="center_vertical">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="330dp"
        android:layout_height="180dp"
        android:id="@+id/logoImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/assam_house_logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtRegisterEmail"
        android:hint="@string/email_editText"
        android:textColorHint="#deaaaaaa"
        android:layout_below="@+id/logoImageView"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:drawableLeft="@drawable/ic_account"
        android:layout_alignLeft="@+id/logoImageView"
        android:layout_alignStart="@+id/logoImageView"
        android:layout_alignRight="@+id/logoImageView"
        android:layout_alignEnd="@+id/logoImageView" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtRegisterPassword"
        android:layout_below="@+id/edtRegisterEmail"
        android:hint="@string/password_editText"
        android:textColorHint="#deaaaaaa"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_alignLeft="@+id/edtRegisterEmail"
        android:layout_alignStart="@+id/edtRegisterEmail"
        android:layout_alignRight="@+id/edtRegisterEmail"
        android:layout_alignEnd="@+id/edtRegisterEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtReenterPassword"
        android:layout_below="@+id/edtRegisterPassword"
        android:hint="@string/reenter_password"
        android:textColorHint="#deaaaaaa"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_alignLeft="@+id/edtRegisterPassword"
        android:layout_alignStart="@+id/edtRegisterPassword"
        android:layout_alignRight="@+id/edtRegisterPassword"
        android:layout_alignEnd="@+id/edtRegisterPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/edtReenterPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorTextPrimary"
        android:onClick="register"
        android:layout_alignLeft="@+id/edtReenterPassword"
        android:layout_alignStart="@+id/edtReenterPassword"
        android:layout_alignRight="@+id/edtReenterPassword"
        android:layout_alignEnd="@+id/edtReenterPassword" />

</RelativeLayout>
